Production/Production/src/objects/Collection_Step_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Action</label>
        <referenceTo>Collection_Step_Action__c</referenceTo>
        <relationshipLabel>Collection Step Criterias</relationshipLabel>
        <relationshipName>Collection_Step_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collection_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collection Step</label>
        <referenceTo>Collection_Step__c</referenceTo>
        <relationshipLabel>Collection Step Criterias</relationshipLabel>
        <relationshipName>Collection_Step_Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exit_Criteria_Type__c</fullName>
        <label>Exit Criteria Type</label>
        <picklist>
            <controllingField>Type__c</controllingField>
            <picklistValues>
                <fullName>Payment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fraud Flag Set</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expression__c</fullName>
        <label>Expression</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>External_Action_Id__c</fullName>
        <label>External Action Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Step_Id__c</fullName>
        <label>External Step Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_of_Execution__c</fullName>
        <label>Order of Execution</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Entry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Collection Step Criteria</label>
    <nameField>
        <label>Collection Step Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collection Step Criterias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>